# yablocks

./: AGENTS.md  Cargo.toml  LICENSE  README.md  notes.md
.github/workflows/: build.yml  ci.yml  release.yml
examples/: config.dzen2.toml  config.i3bar.toml  config.lemonbar.toml  config.xmobar.toml  i3bar-click-handler.sh
src/: block_stream.rs  config.rs  main.rs  renderer.rs  stdin_handler.rs
src/block_stream/: command.rs  cpu.rs  datetime.rs  inotify.rs  interval.rs  network.rs  network_stats.rs  noop.rs  pulse_volume.rs  signal.rs  stdin.rs  temperature.rs  util.rs
