[package]
name = "yablocks"
version = "0.2.0"
edition = "2021"
authors = ["Julian Andrews <jandrews271@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/julianandrews/yablocks"
description = "Yet another block-based status bar generator"

[dependencies]
anyhow = "1.0.66"
clap = { version = "3.2.22", features = ["derive"] }
futures = "0.3.25"
handlebars = "4.3.5"
iwlib = "0.1.0"
pulse = { package = "libpulse-binding", version = "2.26.0" }
netlink-packet-route = "0.13.0"
notify = "5.0.0"
rtnetlink = "0.11.0"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
xdg = "2.4.1"
libc = "0.2.137"

[package.metadata.deb]
extended-description = """\
Yet another block-based status generator.

Generate templated status bar output for bars like dzen2, lemonbar or
xmobar."""
license-file = ["LICENSE", "0"]
maintainer-scripts = "pkg/debian/"
assets = [
    ["target/release/yablocks", "/usr/bin/", "755"],
    ["README.md", "/usr/share/doc/yablocks/", "644"],
    ["examples/*", "/usr/share/doc/yablocks/examples", "644"],

]
